Fix overflow and add bottom padding

--- a/src/features/onboaring/onboarding.scss
+++ b/src/features/onboaring/onboarding.scss
@@ -1,4 +1,9 @@
 .slides-wrapper {
   max-width: 1100px;
   padding-top: 10vh;
+  padding-bottom: 20px;
+}
+
+.swiper-slide {
+  overflow-y: auto;
 }
